--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,9 @@
 
 /* Your CSS Code here. */
+form{
+                background-color: yellow;
+                border: 2px solid black;
+                width: 400px;
+                height: 300px;
+                padding: 5px;
+            }
